<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_community"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_community"
            android:checked="true" />
        <item
            android:id="@+id/nav_garden"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/nav_garden" />
        <item
            android:id="@+id/nav_plants"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_plants" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/btn_plus"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/nav_logout" />
    </group>
</menu>
