<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66BB6A"
    tools:context="com.example.taha.laws.userinterface.SignUpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="203dp"
        android:layout_height="116dp"
        android:layout_marginBottom="375dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtSignupUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/username_Text"
        android:inputType="textPersonName"
        android:shadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <EditText
        android:id="@+id/txtSignupEmail"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email_Text"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/txtSignupPass"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupUsername" />

    <EditText
        android:id="@+id/txtSignupPass"
        android:layout_width="157dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/password_Text"
        android:nextFocusDown="@id/txtSignupCnfPass"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignupEmail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtSignupCnfPass"
        android:layout_width="157dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/cnfpass_Text"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/txtSignupPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtSignupPass" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#1B5E20"
        android:text="@string/signup_Button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSignuptoLogin"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/SignuptoLogin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>
